# ai-trainee-repo

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt
backlog/: sprint1.md
estimation_cost/: ExportedEstimate.xlsx
logs/: usage.md
notebooks/: queries.ipynb
prompts/: best.txt
src/Agents/PromptAgent/: agent_test.py  langgraph.json
src/Agents/RagAgent/: langgraph.json  ragagent.py
src/Agents/SafetyAgent/: langgraph.json  safeagent.py  safeagenttest.py
src/Agents/SafetyAgent/test_result/: gpt35.csv  gpt4o.csv
src/HTTP_Trigger_app/: ask_rag_plugin.py  frontend.html  frontend.py  requirements.txt  test_ask_rag.py
src/HTTP_Trigger_app/ask_rag/: __init__.py
src/HTTP_Trigger_app/raise_error/: __init__.py
src/HTTP_Trigger_app/upload_doc/: __init__.py
src/INVEST/: user-story-generator.py  user_story_generator.py
src/LangChain/: LangChain.py  LangChainChunk.py  LangChainRAG.py
src/RAG_fundaments/: index_pdf__to_azure_s1.py  index_pdf_to_azure_free.py  query_with_rag.py  query_with_rag_sematic.py
src/gpt-4o/: test-prompts.py  three-prompts.py
src/gpt_4o/: test_prompts.py  three_prompts.py
src/quiz-bot/: quiz-prompt-bot.py
src/quiz_bot/: quiz_prompt_bot.py
src/trainee_project/: main.bicep  main.py
