[project]
name = "gen-ai-trainee"
version = "1.0.0"
description = "Resources and code for hands-on learning in Azure-based Generative AI, LLMs, RAG, and engineering best practices."
requires-python = ">=3.8"
readme = "README.md"
keywords = [
    "LLM",
    "RAG",
    "Azure AI",
    "LangChain",
    "Streamlit",
    "Prompt Engineering",
    "Serverless",
    "Cost Estimation",
    "Responsible AI"
]
authors = [
  {name = "Marcin Wróbel", email = "marcinwrobel2002@gmail.com"}
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
skip = ["venv312", "venv", ".venv"]


[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false
